--- a/package.json
+++ b/package.json
@@ -2,29 +2,35 @@
   "name": "umlhighlighter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/marKEYfrfx/UMLHighlighter.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/marKEYfrfx/UMLHighlighter/issues"
-  },
-  "homepage": "https://github.com/marKEYfrfx/UMLHighlighter#readme",
-  "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0",
-    "html-webpack-plugin": "^5.6.3",
-    "ts-loader": "^9.5.2",
-    "typescript": "^5.7.3",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
-  }
+	"engines": {
+		"vscode": "^1.46.0"
+	},
+	"categories": [
+		"Visualization"
+	],
+	"activationEvents": [],
+	"main": "dist/vscode_extension.js",
+	"contributes": {},
+	"scripts": {
+		"vscode:prepublish": "npm run build",
+		"vscode:package": "npm run build && vsce package",
+		"webpack": "webpack --mode production",
+		"dependencies": "cd ../drawio_desktop && npm run build",
+		"build": "npm run webpack",
+		"publish": "vsce publish"
+	},
+	"devDependencies": {
+		"@types/node": "^16.11.4",
+		"@types/vscode": "1.46.0",
+		"@typescript-eslint/eslint-plugin": "^5.1.0",
+		"@typescript-eslint/parser": "^5.1.0",
+		"eslint": "^8.1.0",
+		"raw-loader": "^4.0.2",
+		"ts-loader": "^9.2.6",
+		"typescript": "^4.4.4",
+		"vsce": "^1.100.2",
+		"webpack": "^5.59.1",
+		"webpack-cli": "^4.9.1"
+	},
+	"isDrawioExtension": true
 }
