--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
-    "compilerOptions": {
-      "target": "esnext",
-      "module": "esnext",
-      "lib": ["dom", "esnext"],
-      "allowJs": true,
-      "jsx": "react",
-      "moduleResolution": "node",
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "noImplicitAny": true,
-      "strict": true,
-      "skipLibCheck": true
-    },
-    "include": ["src"],
-    "exclude": ["node_modules", "dist"]
-  }
+	"compilerOptions": {
+		"module": "commonjs",
+		"target": "es2019",
+		"lib": ["ES2019"],
+		"outDir": "dist",
+		"sourceMap": true,
+		"strict": true,
+		"rootDir": "src",
+		"allowJs": true
+	},
+	"files": [
+		"src/loader.d.ts",
+		"src/vscode_extension.ts",
+		"src/vscode-drawio/src/DrawioExtensionApi.ts"
+	]
+}
