--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "src/vscode-drawio"]
-	path = vscode/src/vscode-drawio
-	url = git@github.com:hediet/vscode-drawio.git
-[submodule "vscode-drawio"]
-	path = vscode-drawio
+	path = src/vscode-drawio
 	url = https://github.com/hediet/vscode-drawio.git
