--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,14 @@
 		"sourceMap": true,
 		"strict": true,
 		"rootDir": "src",
-		"allowJs": true
+		"allowJs": true,
+		"noImplicitAny": false
 	},
 	"files": [
+		"src/loader.ts",
 		"src/uml_highlighter.ts",
-        "src/loader.d.ts",
 		"src/vscode_extension.ts",
-		"vscode-drawio/src/DrawioExtensionApi.ts"
+		"src/vscode-drawio/src/DrawioExtensionApi.ts",
+		"src/vscode-drawio/drawio-custom-plugins/src/drawio-types.d.ts"
 	]
 }
